addressed few more review comments